<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventCal</string>
    <string name="action_search">Search</string>
    <string name="action_goto">Go To</string>
    <string name="action_settings">Settings</string>
    <string name="testing_date">21 May, 2013</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="app_read">App Read</string>
    <string name="app_write">App Write</string>
    <string name="title">Title</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reminder">Reminder</string>
    <string name="_15_min">15 min</string>
    <string name="_10_min">10 min</string>
    <string name="_5_min">5 min</string>
    <string name="event_calendar">Event Calendar</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="search_button">Search</string>

    <string-array name="view_list">
        <item>Days</item>
        <item>Months</item>
        <item>Agenda</item>
    </string-array>

    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="title_activity_month">MonthActivity</string>
    <string name="enter_the_event_name">Enter the Event Name</string>
    <string name="event_search">Event Search</string>
    <string name="new_event_notifications">New event notifications</string>
    <string name="facebook_login">Facebook</string>
    <string name="eventbrite_login">Eventbrite</string>
    <string name="google_login">Google</string>
    <string name="uw_login">University Of Waterloo</string>
    <string name="accounts_login">ACCOUNTS LOGIN</string>
    <string name="app_id">377349995710558</string>
    <string name="ok">OK</string>
    <string name="user_id">User ID</string>
    <string name="eventbrite_user_id">Eventbrite User ID</string>
    <string name="location">Location</string>
    <string name="title_activity_map">Location</string>
    <string name="location_results_">Location Results:</string>

</resources>
