<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_goto"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_goto"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/add_event"/>
	<item
        android:id="@+id/today"
        android:icon="@android:drawable/ic_menu_today"
        android:showAsAction="always"
        android:title="@string/today"/>
	<item
	    android:id="@+id/search"
	    android:actionViewClass="android.widget.SearchView"
	    android:icon="@android:drawable/ic_menu_search"
	    android:showAsAction="collapseActionView|ifRoom"
	    android:title="@string/event_search"/>
	<item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="always"
        android:title="@string/location"/>
	
</menu>
